# ButterworthFilterTools

./: .gitignore  ButterTool.cpp  ButterTool.h  CMakeLists.txt  README.md  butterfilter  main.cpp  test_butterfilter
Docs/: a01_FilterImplementationNotes.ipynb  a01_butterworth_design.ipynb
include/: ButterTool.h
src/: ButterTool.cpp
test/: scratch  test_butterworth_filter.test  test_verification_matlab.txt
test/src/: test_butterworth_filter.cpp
